# cf-test-worker

./: .gitignore  Cargo.toml  package.json  wrangler.toml
.github/workflows/: rust-clippy.yml
src/: lib.rs
