[package]
name = "test-worker"
version = "0.1.0"
authors = ["Maxime SIMON"]
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.16"
serde_json = "1.0"
serde = "1.0.163"

[profile.release]
lto = true
strip = true
codegen-units = 1
